--- a/login.css
+++ b/login.css
@@ -87,3 +87,22 @@ button:hover {
     font-weight: 600;
     min-height: 1.2em;
 }
+
+/* --- Responsividade para Telas Pequenas --- */
+@media (max-width: 576px) {
+    .login-container {
+        padding: 1rem;
+    }
+
+    .login-box {
+        padding: 2rem 1.5rem;
+    }
+
+    .login-box h2 {
+        font-size: 1.5rem;
+    }
+
+    .login-box .fa-box-open {
+        font-size: 2rem;
+    }
+}
